--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   },
   "dependencies": {
     "@aloshai/mongosha": "^1.2.3",
+    "@sendgrid/mail": "^7.4.4",
     "ascii-table": "0.0.9",
     "async-ejs": "^0.1.6",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "canvacord": "^5.2.1",
+    "canvas": "^2.8.0",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.5",
     "child_process": "^1.0.2",
     "cookie-parser": "^1.4.5",
     "cron": "^1.8.2",
     "discord.js": "^12.5.1",
+    "dumb-botlistjs": "^2.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -45,9 +49,13 @@
     "socket.io": "^4.0.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "10.15.6",
+    "validator": "^13.6.0",
     "vcodes.js": "1.0.1-renewed",
     "void.db": "^2.0.4",
-    "void.nsfw": "^1.0.8-beta"
+    "void.nsfw": "^1.0.8-beta",
+    "webhook-discord": "^3.7.7",
+    "weird-to-normal-chars": "^1.5.0",
+    "weky": "^1.8.5"
   },
   "engines": {
     "node": "12.x"
