--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "canvacord": "^5.2.1",
     "canvas": "^2.8.0",
+    "canvas-constructor": "^4.1.0",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.5",
     "child_process": "^1.0.2",
@@ -33,6 +34,7 @@
     "jquery": "^3.6.0",
     "js-alert": "^1.0.4",
     "level-session-store": "^2.2.0",
+    "markdown-converter": "^0.2.2",
     "marked": "^2.0.0",
     "memorystore": "^1.6.4",
     "mmdb-reader": "^1.2.0",
